--- a/.gitignore
+++ b/.gitignore
@@ -2,10 +2,7 @@
 .pio/
 
 # VS Code workspace files
-.vscode/.browse.c_cpp.db*
-.vscode/c_cpp_properties.json
-.vscode/launch.json
-.vscode/ipch/
+.vscode/
 
 # Local backups
 backups/
