--- a/platformio.ini
+++ b/platformio.ini
@@ -16,5 +16,6 @@ lib_deps =
   	https://github.com/someweisguy/esp_dmx.git
 	tzapu/WiFiManager
 	hideakitai/ArtNet@^0.9.2
+	olikraus/U8g2
 upload_speed = 115200
 monitor_speed = 115200
